# encoder_to_lcd

./: CMakeLists.txt  README.md  lcd_1604a.c  main.c
